[build-system]
requires = [
    "meson>=0.63.0",
    "meson-python",
    "patchelf",
    "wheel",
    "numpy",
]
build-backend = "mesonpy"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "missingvaluedtype"
description = "A set of dtypes with bit-pattern based missing values"
version = "0.0.1"
readme = 'README.md'
authors = [
    { name = "Justus Magin" },
]
requires-python = ">=3.10.0"
dependencies = [
    "numpy",
]

[tool.ruff]
line-length = 79
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.meson-python.args]
dist = []
setup = []
compile = []
install = []
